OpenShift_Adminstration/Network Configuration/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-nginx
spec:
  selector:
    app: custom-nginx
  ports:
    - protocol: TCP
      port: 80
