OpenShift_Adminstration/Network Configuration/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: custom-nginx-ingress
spec:
  rules:
  - host: www.mostafa.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: custom-nginx
            port:
              number: 80
