OpenShift_Adminstration/Network Configuration/Network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx
spec:
  podSelector:
    matchLabels:
      app: custom-nginx
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
